[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/Bosses/Golem Boss/Spike Ball/SpikeBall.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Bosses/Golem Boss/Spike Ball/SpikeBall.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=27]
radius = 5.09902

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 10.8167

[sub_resource type="CircleShape2D" id=26]
radius = 210.611

[node name="SpikeBall" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 36 )
frame = 5
playing = true

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 4

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 19 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
shape = SubResource( 26 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
